--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "clsx": "^2.1.1",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "react-tsparticles": "^2.12.2",
+    "tailwind-merge": "^3.0.1",
     "tsparticles": "^3.7.1"
   },
   "devDependencies": {
@@ -31,6 +34,6 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.0.5"
+    "vite": "^6.1.0"
   }
 }
