--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.3",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-countdown": "^2.3.6",
